--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -24,7 +24,7 @@
     height: 100vh;                 /* Full height of viewport */
     width: 280px;
     padding: 20px;
-    background-color: rgba(128, 255, 128, 0.5);
+    background-color: rgb(120, 252, 120);
     display: flex;
     flex-direction: column;
     transition: transform 0.3s ease;
@@ -72,6 +72,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
+    background-color: rgba(190, 190, 190, 0.5);
   }
   
   .menu-toggle {
