--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -7,7 +7,7 @@
   }
   
   body {
-    background-color: rgba(190, 190, 190, 0.5);
+    /* background-color: rgba(190, 190, 190, 0.5); */
     color: #1f2d3d;
   }
   
@@ -72,7 +72,6 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
-    background-color: rgba(190, 190, 190, 0.5);
   }
   
   .menu-toggle {
