--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -24,7 +24,7 @@
     height: 100vh;                 /* Full height of viewport */
     width: 280px;
     padding: 20px;
-    background-color: rgb(120, 252, 120);
+    background-color: #eaeaea;
     display: flex;
     flex-direction: column;
     transition: transform 0.3s ease;
@@ -46,7 +46,7 @@
   
   .nav-links a {
     text-decoration: none;
-    color: #7c7e80;
+    color: green;
     padding: 15px 0;
     display: flex;
     align-items: center;
@@ -57,7 +57,7 @@
   
   .nav-links a.active,
   .nav-links a:hover {
-    color: #0d6efd;
+    color: #000000;
   }
   
   /* Main Content */
