--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <header class="top-bar">
     <div class="menu-toggle" onclick="toggleSidebar()"><i class="fa-solid fa-bars"></i></div>
     <div class="profile-info">
-      <span>ALIYU ABUBAKAR <br><b style="font-size: 11px; color: rgb(111, 111, 111); margin-left: 90px;">Profile <i class="fas fa-chevron-down"></i> </b></span>
+      <span>{{ user }} <br><b style="font-size: 11px; color: rgb(111, 111, 111); margin-left: 90px;">Profile <i class="fas fa-chevron-down"></i> </b></span>
       <div class="profile-dropdown-wrapper">
         <div class="avatar" onclick="toggleProfileMenu()">AA</div>
         <div class="dropdown" id="profileDropdown">
